First commited as before_65012_rev2